# *****************************************************************************
# *
# * Copyright (C) 2024 Infineon Technologies AG. All rights reserved.
# *
# * Infineon Technologies AG (Infineon) is supplying this software for use with
# * Infineon's microcontrollers. This file can be freely distributed within
# * development tools that are supporting such microcontrollers.
# *
# * THIS SOFTWARE IS PROVIDED "AS IS". NO WARRANTIES, WHETHER EXPRESS, IMPLIED
# * OR STATUTORY, INCLUDING, BUT NOT LIMITED TO, IMPLIED WARRANTIES OF
# * MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE APPLY TO THIS SOFTWARE.
# * INFINEON SHALL NOT, IN ANY CIRCUMSTANCES, BE LIABLE FOR SPECIAL, INCIDENTAL,
# * OR CONSEQUENTIAL DAMAGES, FOR ANY REASON WHATSOEVER.
# *
# ******************************************************************************
[package]
name = "tc39xed"
version = "0.0.1"
authors = ["Infineon developers"]
edition = "2021"
rust-version = "1.64"
description = "Description tests"
keywords = ["no_std", "infineon", "aurix"]
categories = ["embedded","hardware-support","no-std","no-std::no-alloc"]
license-file = "LICENSE.txt"

[lib]
test = false
bench = false

[features]
fce = []
hsm = []
iom = []
p00 = []
p01 = []
p02 = []
p10 = []
p11 = []
p12 = []
p13 = []
p14 = []
p15 = []
p20 = []
p21 = []
p22 = []
p23 = []
p24 = []
p25 = []
p26 = []
p30 = []
p31 = []
p32 = []
p33 = []
p34 = []
p40 = []
p41 = []
agbt = []
mtu = []
scu = []
smu = []
hspdm = []
spu0 = []
spu1 = []
spulckstp = []
rif0 = []
rif1 = []
emem = []
ememmpu0 = []
ememmpu1 = []
ememmpu2 = []
ememmpu3 = []
hssl0 = []
hssl1 = []
hsct0 = []
hsct1 = []
ccu60 = []
ccu61 = []
evadc = []
edsadc = []
convctrl = []
gpt120 = []
gtm = []
pms = []
stm0 = []
stm1 = []
stm2 = []
stm3 = []
stm4 = []
stm5 = []
asclin0 = []
asclin1 = []
asclin2 = []
asclin3 = []
asclin4 = []
asclin5 = []
asclin6 = []
asclin7 = []
asclin8 = []
asclin9 = []
asclin10 = []
asclin11 = []
sdmmc0 = []
eray0 = []
eray1 = []
geth = []
i2c0 = []
i2c1 = []
msc0 = []
msc1 = []
msc2 = []
msc3 = []
can0 = []
can1 = []
can2 = []
psi5 = []
psi5s = []
qspi0 = []
qspi1 = []
qspi2 = []
qspi3 = []
qspi4 = []
qspi5 = []
sent = []
dmu = []
pmu = []
ebu = []
int = []
src = []
adma0 = []
amu00 = []
amu01 = []
dam0 = []
adma1 = []
amu10 = []
amu11 = []
dam1 = []
lmu0 = []
lmu1 = []
lmu2 = []
dma = []
cbs = []
dom0 = []
dom1 = []
dom2 = []
mcds = []
cpu0 = []
pfi0 = []
cpu1 = []
pfi1 = []
cpu2 = []
pfi2 = []
cpu3 = []
pfi3 = []
cpu4 = []
pfi4 = []
cpu5 = []
pfi5 = []
fsi = []

csfr_cpu0 = []
csfr_cpu1 = []
csfr_cpu2 = []
csfr_cpu3 = []
csfr_cpu4 = []
csfr_cpu5 = []
all = ["fce","hsm","iom","p00","p01","p02","p10","p11","p12","p13","p14","p15","p20","p21","p22","p23","p24","p25","p26","p30","p31","p32","p33","p34","p40","p41","agbt","mtu","scu","smu","hspdm","spu0","spu1","spulckstp","rif0","rif1","emem","ememmpu0","ememmpu1","ememmpu2","ememmpu3","hssl0","hssl1","hsct0","hsct1","ccu60","ccu61","evadc","edsadc","convctrl","gpt120","gtm","pms","stm0","stm1","stm2","stm3","stm4","stm5","asclin0","asclin1","asclin2","asclin3","asclin4","asclin5","asclin6","asclin7","asclin8","asclin9","asclin10","asclin11","sdmmc0","eray0","eray1","geth","i2c0","i2c1","msc0","msc1","msc2","msc3","can0","can1","can2","psi5","psi5s","qspi0","qspi1","qspi2","qspi3","qspi4","qspi5","sent","dmu","pmu","ebu","int","src","adma0","amu00","amu01","dam0","adma1","amu10","amu11","dam1","lmu0","lmu1","lmu2","dma","cbs","dom0","dom1","dom2","mcds","cpu0","pfi0","cpu1","pfi1","cpu2","pfi2","cpu3","pfi3","cpu4","pfi4","cpu5","pfi5","fsi",]

[package.metadata.docs.rs]
features = ["all"]